# some-tools

./: README.md
chitang_money/: Cargo.toml
chitang_money/src/: main.rs
english_listen_books/: Cargo.toml  books.json
english_listen_books/src/: main.rs  mods.rs
english_listen_books/src/mods/: request.rs  types.rs
find-the-key/: Cargo.toml
find-the-key/src/: main.rs
regtest/: Cargo.toml
regtest/src/: main.rs
test_mem/: Cargo.toml
test_mem/src/: main.rs
translation/srt2bcc/: Cargo.toml  config.json
translation/srt2bcc/src/: main.rs
translation/srttra/: Cargo.toml  config.json
translation/srttra/src/: main.rs
vvnetwork-test/: Cargo.toml
vvnetwork-test-server/: Cargo.toml
vvnetwork-test-server/src/: main.rs
vvnetwork-test/src/: main.rs
whois_find/: Cargo.toml  servers.json
whois_find/src/: main.rs
