[package]
name = "english_listen_books"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.89"
serde = {version = "1.0.147",features = ["derive"]}
reqwest = {version = "0.11.13",features = ["socks","brotli","gzip","deflate","blocking"]}
# dotenv = "0.15.0"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false