[package]
name = "srttra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
curl = "0.4.43"
qstring = "0.7.2"
md5 = "0.7.0"
serde_json = "1.0.82"
serde = {version ="1.0.139",features = ["derive"]}
rand = "0.8.5"

[profile.fast]
inherits = "release"
opt-level = 3 
debug = false 
# split-debuginfo = 'off' 
debug-assertions = false 
overflow-checks = false 
lto = true 
panic = 'unwind' 
incremental = false 
codegen-units = 1 
rpath = false